correction mobile

--- a/web/src/scss/custom.scss
+++ b/web/src/scss/custom.scss
@@ -5,6 +5,10 @@
 
 .left_col {
   background: #2A3F54;
+
+  @media (max-width: 768px) {
+    padding-bottom: 100px;
+  }
 }
 
 .nav-sm .container.body .col-md-3.left_col {
